fix(front-blog): pass explicit scrollbar widths
Agent-Logs-Url: https://github.com/lumirlumir/web-lumir.page/sessions/e0ed88e1-8594-47b3-9ad6-de5e1a49290f

--- a/apps/front-blog/src/components/layouts/aside.module.scss
+++ b/apps/front-blog/src/components/layouts/aside.module.scss
@@ -1,7 +1,7 @@
 $transition: transform 0.75s ease-in-out;
 
 .aside {
-  @include selector-scrollbar(2);
+  @include selector-scrollbar(0.125rem);
 
   position: sticky;
   top: var(--size-header-height);
