--- a/apps/front-blog/src/components/layouts/nav.module.scss
+++ b/apps/front-blog/src/components/layouts/nav.module.scss
@@ -1,5 +1,5 @@
 .nav {
-  @include selector-scrollbar(2);
+  @include selector-scrollbar(0.125rem);
 
   position: sticky;
   top: var(--size-header-height);
